--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/* RESET */
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box  ;
-}
 
 .body {
     font-family: 'Open Sans', sans-serif;
@@ -14,15 +8,11 @@
     margin: 0 auto;
 }
 
-.row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+main {
+    height: 100vh;
 }
 
 [class*="col-"]{
-    flex-grow: 0;
-    flex-shrink: 0;
     text-align: center;
     padding: 1rem .2rem;
     border: 2px solid white;
@@ -30,13 +20,9 @@
     color: white;
 }
 
-.ex-1 .col-6 .pink {
+div .col-6 .pink{
     background-color: pink;
-    border: none;
-}
-
-main {
-    height: 100vh;
+    border: 2px solid rgb(158, 209, 77);
 }
 
 .ex-2 {
